==========
Change Log
==========

Version 2.1.1 - 
------------------------------
- Added support for assigning to ParseResults using slices.


Version 2.1.0 - February, 2016
------------------------------
- Modified the internal _trim_arity method to distinguish between 
  TypeError's raised while trying to determine parse action arity and
  those raised within the parse action itself. This will clear up those
  confusing "<lambda>() takes exactly 1 argument (0 given)" error 
  messages when there is an actual TypeError in the body of the parse
  action. Thanks to all who have raised this issue in the past, and
  most recently to Michael Cohen, who sent in a proposed patch, and got
  me to finally tackle this problem.

- Added compatibility for pickle protocols 2-4 when pickling ParseResults. 
  In Python 2.x, protocol 0 was the default, and protocol 2 did not work.
  In Python 3.x, protocol 3 is the default, so explicitly naming 
  protocol 0 or 1 was required to pickle ParseResults. With this release,
  all protocols 0-4 are supported. Thanks for reporting this on StackOverflow,
  Arne Wolframm, and for providing a nice simple test case!

- Added optional 'stopOn' argument to ZeroOrMore and OneOrMore, to
  simplify breaking on stop tokens that would match the repetition 
  expression. 
  
  It is a common problem to fail to look ahead when matching repetitive 
  tokens if the sentinel at the end also matches the repetition
  expression, as when parsing "BEGIN aaa bbb ccc END" with:
  
    "BEGIN" + OneOrMore(Word(alphas)) + "END"

  Since "END" matches the repetition expression "Word(alphas)", it will
  never get parsed as the terminating sentinel. Up until now, this has 
  to be resolved by the user inserting their own negative lookahead:
  
    "BEGIN" + OneOrMore(~Literal("END") + Word(alphas)) + "END"
  
  Using stopOn, they can more easily write:
  
    "BEGIN" + OneOrMore(Word(alphas), stopOn="END") + "END"
  